<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/backtop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/add"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:background="#00ff0000"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/backtop"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
            android:background="#00FF0000"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/global_new" />

    </RelativeLayout>
</RelativeLayout>
