...
        android:layout_marginTop="3dp"
        android:maxLength="13"
        android:text="@string/ticket_location_1"
        android:textSize="17sp" />

    <Button
        android:id="@+id/tickets_claim"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:text="@string/ticket_claim"
        android:textSize="20sp" />
...
